--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -1,19 +1,8 @@
-name: C/C++ CI
+workflow "C++ Lint" {
+  on = "push"
+  resolves = ["lint-action"]
+}
 
-on: [push]
-
-jobs:
-  build:
-
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v1
-    - name: configure
-      run: ./configure
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+action "lint-action" {
+  uses = "CyberZHG@github-action-python-lint@master"
+}
